# memarray

./: COPYING.txt  Cargo.toml  build.rs  wrapped.h
src/: ffi.rs  io.rs  lib.rs  linalg.rs  serial.rs
