[package]
name = "memarray"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "memarray"
path = "src/lib.rs"

[features]
default = []
mkl = []
#mkl_gnu = []

[build-dependencies]
bindgen = "*"

[dependencies]
arrayidx = { path = "../arrayidx" }
byteorder = "*"
float = { path = "../float" }
